Added JmhRunner.devRunWithAssertions method. Renamed other JmhRunner methods to make them shorter